--- a/.github/workflows/issues.yml
+++ b/.github/workflows/issues.yml
@@ -16,7 +16,7 @@ jobs:
           ado_organization: "ninallam"
           ado_project: "load-test-cicd-tutorial"
           ado_area_path: "load-test-cicd-tutorial"
-          ado_iteration_path: "load-test-cicd-tutorial\Sprint 1"
+          ado_iteration_path: "load-test-cicd-tutorial\\Sprint 1"
           ado_wit: "User Story"
           ado_new_state: "New"
           ado_active_state: "Active"
