--- a/.github/workflows/issues.yml
+++ b/.github/workflows/issues.yml
@@ -17,7 +17,7 @@ jobs:
           ado_project: "load-test-cicd-tutorial"
           ado_area_path: "load-test-cicd-tutorial"
           ado_iteration_path: "load-test-cicd-tutorial\\Sprint 1"
-          ado_wit: "User Story"
+          ado_wit: "Issue"
           ado_new_state: "New"
           ado_active_state: "Active"
           ado_close_state: "Closed"
