--- a/.github/workflows/issues.yml
+++ b/.github/workflows/issues.yml
@@ -13,11 +13,11 @@ jobs:
         env:
           ado_token: "${{ secrets.ADO_PERSONAL_ACCESS_TOKEN }}"
           github_token: "${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}"
-          ado_organization: "ninallam"
-          ado_project: "load-test-cicd-tutorial"
-          ado_area_path: "load-test-cicd-tutorial"
-          ado_iteration_path: "load-test-cicd-tutorial\\Sprint 1"
-          ado_wit: "Issue"
+          ado_organization: "devdiv"
+          ado_project: "OnlineServices"
+          ado_area_path: "OnlineServices\\CloudTestingService"
+          ado_iteration_path: "OnlineServices\\OneVS\\Nickel [NI]\\Q3\\2021-09"
+          ado_wit: "User Story"
           ado_new_state: "New"
           ado_active_state: "Active"
           ado_close_state: "Closed"
