--- a/.github/workflows/issues.yml
+++ b/.github/workflows/issues.yml
@@ -1,9 +1,10 @@
 name: Sync issue to Azure DevOps work item
 
-on:
-  issues:
-    types:
-      [opened, edited, deleted, closed, reopened, labeled, unlabeled, assigned]
+on: 
+  workflow_dispatch:
+#  issues:
+#    types:
+#      [opened, edited, deleted, closed, reopened, labeled, unlabeled, assigned]
 
 jobs:
   alert:
