--- a/.github/workflows/issues.yml
+++ b/.github/workflows/issues.yml
@@ -1,10 +1,9 @@
 name: Sync issue to Azure DevOps work item
 
 on: 
-  workflow_dispatch:
-#  issues:
-#    types:
-#      [opened, edited, deleted, closed, reopened, labeled, unlabeled, assigned]
+  issues:
+    types:
+      [opened, edited, deleted, closed, reopened, labeled, unlabeled, assigned]
 
 jobs:
   alert:
