--- a/.github/workflows/issues.yml
+++ b/.github/workflows/issues.yml
@@ -3,7 +3,7 @@ name: Sync issue to Azure DevOps work item
 on: 
   issues:
     types:
-      [opened, edited, deleted, closed, reopened]
+      [opened, edited, closed, reopened]
 
 jobs:
   alert:
