--- a/.github/workflows/issues.yml
+++ b/.github/workflows/issues.yml
@@ -17,8 +17,8 @@ jobs:
           ado_project: "OnlineServices"
           ado_area_path: "OnlineServices\\CloudTestingService"
           ado_iteration_path: "OnlineServices\\OneVS\\Nickel [NI]\\Q3\\2021-09"
-          ado_wit: "User Story"
-          ado_new_state: "New"
+          ado_wit: "Issue"
+          ado_new_state: "Active"
           ado_active_state: "Active"
           ado_close_state: "Closed"
           ado_bypassrules: false
