--- a/.github/workflows/issues.yml
+++ b/.github/workflows/issues.yml
@@ -18,7 +18,7 @@ jobs:
           ado_area_path: "OnlineServices\\CloudTestingService"
           ado_iteration_path: "OnlineServices\\OneVS\\Nickel [NI]\\Q3\\2021-09"
           ado_wit: "Issue"
-          ado_new_state: "Active"
+          ado_new_state: "New"
           ado_active_state: "Active"
           ado_close_state: "Closed"
           ado_bypassrules: false
