--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,5 +1,5 @@
 blank_issues_enabled: false
 contact_links:
-  - name: Microsoft Developer Community
+  - name: Microsoft Developer Community [New]
     url: https://developercommunity.visualstudio.com/loadtesting
-    about: Create an issue on Developer Community
+    about: We are no longer monitoring new issues on this repo is. Please create an issue on Developer Community.
