--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -8,4 +8,4 @@ contact_links:
     about: We are no longer monitoring new issues on this repo. Please report a problem on Developer Community.
   - name: Request a Feature
     url: https://developercommunity.visualstudio.com/loadtesting/suggest
-    about: We are no longer monitoring new issues on this repo. Please create submit a feature request on Developer Community.
+    about: We are no longer monitoring new issues on this repo. Please submit a feature request on Developer Community.
